[metadata]
name = robellib
author = robel
author_email = 
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = https://github.com/robelgeda/robellib.git
description = robellib
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = https://github.com/robelgeda/robellib.git

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
robellib = data/*

[tool:pytest]
testpaths = "robellib" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    robellib/_astropy_init*
    robellib/conftest.py
    robellib/*setup_package*
    robellib/tests/*
    robellib/*/tests/*
    robellib/extern/*
    robellib/version*
    */robellib/_astropy_init*
    */robellib/conftest.py
    */robellib/*setup_package*
    */robellib/tests/*
    */robellib/*/tests/*
    */robellib/extern/*
    */robellib/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
